Moving to conda build with caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: generic
 
+os:
+    - linux
+    - osx
+osx_image: xcode6.4
+
 cache:
 
   directories:
@@ -33,8 +38,10 @@ install:
 
               wget https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh
 
+            fi
+
             # Install miniconda and all the packages
-            
+
             bash miniconda.sh -b -p $HOME/miniconda
             export PATH="$HOME/miniconda/bin:$PATH"
             hash -r
