Fixing the use of the cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ install:
   - conda info -a
   - source activate test-environment
   - hash -r
-  - conda update -c conda-forge -c threeml threeml astromodels
+  - conda update -c conda-forge -c threeml threeml astromodels pytest-cov
   - pip install codecov
   - pip install root_numpy
   - pip install .
