Fixing the use of the cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,8 @@ install:
   - conda info -a
   - source activate test-environment
   - hash -r
-  - conda update -c conda-forge -c threeml threeml astromodels pytest-cov
-  - pip install codecov
+  - conda update -c conda-forge -c threeml threeml astromodels
+  - conda install -c conda-forge pytest-cov codecov
   - pip install root_numpy
   - pip install .
 
