--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ install:
   - pip install .
 
 script:
-  - cd hawc_hal/tests ; pytest -vv --cov=hawc_hal
+  - python -m pytest -vv --cov=hawc_hal
   - conda clean -y -a
   - pip uninstall hawc_hal -y
 
