--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: generic
-os:
-- linux
-- osx
-osx_image: xcode6.4
-dist: trusty
-sudo: required
 
 env:
   - MPLBACKEND='Agg' OMP_NUM_THREADS=1 MKL_NUM_THREADS=1 NUMEXPR_NUM_THREADS=1 PATH="${HOME}/miniconda/bin:${PATH}"
+
+jobs:
+  include:
+  - os: linux
+    python: 2.7
+    env: TRAVIS_PYTHON_VERSION=2.7
+  - os: osx
+    python: 2.7
+    env: TRAVIS_PYTHON_VERSION=2.7
+  - os: linux
+    python: 3.7
+    env: TRAVIS_PYTHON_VERSION=3.7
+  - os: osx
+    python: 3.7
+    env: TRAVIS_PYTHON_VERSION=3.7
 
 cache:
   directories:
