--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -35,10 +35,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Cache conda
-              uses: actions/cache@v1
+              uses: actions/cache@v2
               with:
                   path: ~/conda_pkgs_dir
-                  key: conda-${{ matrix.os }}-python-${{ matrix.python-version }}-${{ hashFiles('environment-ci.yml') }}
+                  key: conda-${{ matrix.os }}-python-${{ matrix.python-version }}-${{ hashFiles('environment-ci-new.yml') }}
             - name: Setup Miniconda
               uses: conda-incubator/setup-miniconda@v2
               with:
@@ -135,10 +135,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Cache conda
-              uses: actions/cache@v1
+              uses: actions/cache@v2
               with:
                   path: ~/conda_pkgs_dir
-                  key: conda-${{ matrix.os }}-python-${{ matrix.python-version }}-${{ hashFiles('environment-ci.yml') }}
+                  key: conda-${{ matrix.os }}-python-${{ matrix.python-version }}-${{ hashFiles('environment-ci-new.yml') }}
             - name: Setup Miniconda
               uses: conda-incubator/setup-miniconda@v2
               with:
