--- a/ci/environment.yml
+++ b/ci/environment.yml
@@ -22,8 +22,8 @@ dependencies:
   - uncertainties
   - pyyaml>=5.1
   - dill
-  - iminuit>=1.2,<2
-  - astromodels>=2
+  - iminuit>=2
+  - astromodels>=2.2
   - astroquery
   - corner>=1.0.2
   - pandas>=0.23
@@ -44,10 +44,9 @@ dependencies:
   - ipopt
   - numdifftools
   - tqdm
-  - astromodels
-  - threeml
+  - threeml>=2.2.1
   - future
   - xspec-modelsonly==6.25
-  - root
+  - root==6.22.2
   - numba
   - reproject
