--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -94,7 +94,7 @@ jobs:
 
                   PKG="pytest>=3.6 pandas>=0.23 ultranest interpolation>=2.1.5"
 
-                  conda install ${PKG} codecov pytest-cov git ${MATPLOTLIB} ${NUMPY} ${XSPEC} astropy ${compilers} scipy astropy astromodels threeML numba reproject root emcee pymultinest ultranest flake8
+                  mamba install ${PKG} codecov pytest-cov git ${MATPLOTLIB} ${NUMPY} ${XSPEC} astropy ${compilers} scipy astropy astromodels threeML numba reproject root emcee pymultinest ultranest flake8
                   pip install --no-binary :all: root_numpy
             - name: Conda list
               shell: bash -l {0}
@@ -195,7 +195,7 @@ jobs:
 
                   PKG="pytest>=3.6 pandas>=0.23 ultranest interpolation>=2.1.5"
 
-                  conda install ${PKG} codecov pytest-cov git ${MATPLOTLIB} ${NUMPY} ${XSPEC} astropy ${compilers} scipy astropy astromodels threeML numba reproject root emcee pymultinest ultranest flake8
+                  mamba install ${PKG} codecov pytest-cov git ${MATPLOTLIB} ${NUMPY} ${XSPEC} astropy ${compilers} scipy astropy astromodels threeML numba reproject root emcee pymultinest ultranest flake8
                   pip install --no-binary :all: root_numpy
                   pip uninstall astromodels threeML -y
                   pip install git+https://github.com/threeml/astromodels.git
