--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -88,7 +88,7 @@ jobs:
                   if [ -n "${MATPLOTLIBVER}" ]; then MATPLOTLIB="matplotlib=${MATPLOTLIBVER}"; fi
                   if [ -n "${NUMPYVER}" ]; then NUMPY="numpy=${NUMPYVER}"; fi
                   if [ -n "${XSPECVER}" ];
-                  then export XSPEC="xspec-modelsonly=${XSPECVER} ${xorg}";
+                  then export XSPEC="xspec-modelsonly>=${XSPECVER} ${xorg}";
                   fi
 
 
