--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -61,40 +61,12 @@ jobs:
                   else  # osx
                   miniconda_os=MacOSX
                   compilers="clang_osx-64 clangxx_osx-64 gfortran_osx-64"
-
-                  # On macOS we also need the conda libx11 libraries used to build xspec
-                  # We also need to pin down ncurses, for now only on macos.
-                  xorg="xorg-libx11"
                   fi
-
-                  # Get the version in the __version__ environment variable
-                  #python ci/set_minor_version.py --patch $TRAVIS_BUILD_NUMBER --version_file threeML/version.py
-
-                  #export PKG_VERSION=$(cd threeML && python -c "import version;print(version.__version__)")
-
-                  export PKG_VERSION=$(python -c "import versioneer;print(versioneer.get_version())")
 
                   echo "HOME= ${HOME}"
-                  echo "Building ${PKG_VERSION} ..."
                   echo "Python version: ${{matrix.python-version}}"
 
-                  #libgfortranver="3.0"
-                  #NUMPYVER=1.15
-                  MATPLOTLIBVER=2
-                  XSPECVER="6.25"
-                  xspec_channel=xspecmodels
-
-                  # Figure out requested dependencies
-                  if [ -n "${MATPLOTLIBVER}" ]; then MATPLOTLIB="matplotlib=${MATPLOTLIBVER}"; fi
-                  if [ -n "${NUMPYVER}" ]; then NUMPY="numpy=${NUMPYVER}"; fi
-                  if [ -n "${XSPECVER}" ];
-                  then export XSPEC="xspec-modelsonly>=${XSPECVER} ${xorg}";
-                  fi
-
-
-                  PKG="pytest>=3.6 pandas>=0.23 ultranest interpolation>=2.1.5"
-
-                  mamba install ${PKG} codecov pytest-cov git ${MATPLOTLIB} ${NUMPY} ${XSPEC} astropy ${compilers} scipy astropy astromodels threeML numba reproject root emcee pymultinest ultranest flake8
+                  mamba install pytest codecov pytest-cov git matplotlib numpy astropy ${compilers} scipy astropy astromodels threeML numba reproject root flake8
                   pip install --no-binary :all: root_numpy
             - name: Conda list
               shell: bash -l {0}
