--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -57,7 +57,7 @@ jobs:
                   if [[ ${{matrix.os}} == ubuntu-latest ]];
                   then
                   miniconda_os=Linux
-                  compilers="gcc_linux-64 gxx_linux-64 gfortran_linux-64"
+                  compilers="gcc_linux-64 gxx_linux-64"
                   else  # osx
                   miniconda_os=MacOSX
                   compilers="clang_osx-64 clangxx_osx-64 gfortran_osx-64"
@@ -130,7 +130,7 @@ jobs:
                   if [[ ${{matrix.os}} == ubuntu-latest ]];
                   then
                   miniconda_os=Linux
-                  compilers="gcc_linux-64 gxx_linux-64 gfortran_linux-64"
+                  compilers="gcc_linux-64 gxx_linux-64"
                   else  # osx
                   miniconda_os=MacOSX
                   compilers="clang_osx-64 clangxx_osx-64 gfortran_osx-64"
