--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -66,7 +66,7 @@ jobs:
                   echo "HOME= ${HOME}"
                   echo "Python version: ${{matrix.python-version}}"
 
-                  mamba install pytest codecov pytest-cov git astromodels threeML numba reproject root flake8
+                  mamba install ${compilers} pytest codecov pytest-cov git astromodels threeML numba reproject root flake8
                   pip install --no-binary :all: root_numpy
             - name: Conda list
               shell: bash -l {0}
