--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -30,6 +30,7 @@ jobs:
             matrix:
                 os: ["ubuntu-latest", "macos-latest"]
                 python-version: [3.7]
+            fail-fast: false
         runs-on: ${{ matrix.os }}
         steps:
             - name: Checkout
@@ -103,6 +104,7 @@ jobs:
             matrix:
                 os: ["ubuntu-latest", "macos-latest"]
                 python-version: [3.7]
+            fail-fast: false
         runs-on: ${{ matrix.os }}
         steps:
             - name: Checkout
