--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -234,7 +234,7 @@ jobs:
                   echo "Python version: ${{matrix.python-version}}"
 
                   mamba install pytest codecov pytest-cov git astromodels threeML numba reproject root flake8
-                  pip install --no-binary :all: root_numpy
+                  mamba install -c conda-forge root_numpy
                   pip uninstall astromodels threeML -y
                   pip install git+https://github.com/threeml/astromodels.git@dev
                   pip install git+https://github.com/threeml/threeML.git@dev
